fix: 당첨 로또 번호 입력 시 올바르게 동작하지 않는 것 수정